WikimediaUI theme: Prevent z-index leaks for radios and checkboxes
We set `z-index: 1;` on the `<input>` element for the radio/checkbox,
which allowed it to be clickable "through" absolutely positioned
elements placed on top of it.

We use the same technique elsewhere in this file, e.g. to prevent
individual buttons from leaking outside of button groups.

Bug: T213517

--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -150,6 +150,8 @@
 }
 
 .theme-oo-ui-checkboxInputWidget() {
+	// Create a stacking context, so that we can use `z-index` below without leaking out
+	z-index: 0;
 	position: relative;
 	line-height: @size-input-binary;
 	// Prevent the fake span from jumping to the next line of text
@@ -1017,6 +1019,8 @@
 }
 
 .theme-oo-ui-radioInputWidget() {
+	// Create a stacking context, so that we can use `z-index` below without leaking out
+	z-index: 0;
 	position: relative;
 	line-height: @size-input-binary;
 	// Prevent the fake span from jumping to the next line of text
